<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BDActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <EditText
            android:id="@+id/txtcodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtcodigo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtdescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtdescripcion"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtprecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtprecio"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btningresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ingresar"
            android:text="@string/btningresar" />

        <Button
            android:id="@+id/btnxcodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="consultaporcodigo"
            android:text="@string/btnxcodigo" />

        <Button
            android:id="@+id/btnxdescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="consultapordescripcion"
            android:text="@string/btnxdescripcion" />

        <Button
            android:id="@+id/btneliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="eliminar"
            android:text="@string/btneliminar" />

        <Button
            android:id="@+id/btnmodificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="modificacion"
            android:text="@string/btnmodificar" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>