<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSeccionActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:text="@string/USER" />

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:hint="@string/USER"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/PASEWORD" />

        <EditText
            android:id="@+id/contra"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:ems="10"
            android:hint="@string/PASEWORD"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnIngreso"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:onClick="bienvenido"
            android:text="@string/INGRESE" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>